force-app/main/default/objects/Experian_Configuration__c/Experian_Configuration__c.object-meta.xml
<CustomObject>
    <label>Experian Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>