force-app/main/default/objects/Experian_Configuration__c/fields/AMS_Get_Alert_List_URL__c.field-meta.xml
<CustomField>
    <fullName>AMS_Get_Alert_List_URL__c</fullName>
    <label>AMS Get Alert List URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>