force-app/main/default/objects/Experian_Configuration__c/fields/AMS_Register_URL__c.field-meta.xml
<CustomField>
    <fullName>AMS_Register_URL__c</fullName>
    <label>AMS Register URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>