force-app/main/default/objects/Experian_Configuration__c/fields/AMS_Subcode__c.field-meta.xml
<CustomField>
    <fullName>AMS_Subcode__c</fullName>
    <label>AMS Portfolio Subcode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>