force-app/main/default/objects/Experian_Configuration__c/fields/AMS_Subscriber_Code__c.field-meta.xml
<CustomField>
    <fullName>AMS_Subscriber_Code__c</fullName>
    <label>AMS Subscriber Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>