force-app/main/default/objects/Experian_Configuration__c/fields/BOP_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>BOP_PDF_URL__c</fullName>
    <label>BOP PDF URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>