force-app/main/default/objects/Experian_Configuration__c/fields/Decision_Basic_URL__c.field-meta.xml
<CustomField>
    <fullName>Decision_Basic_URL__c</fullName>
    <label>Decision Basic URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>