force-app/main/default/objects/Experian_Configuration__c/fields/Decision_IQ_Subcode__c.field-meta.xml
<CustomField>
    <fullName>Decision_IQ_Subcode__c</fullName>
    <label>DIQ Subcode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>