force-app/main/default/objects/Experian_Configuration__c/fields/DecisionIQ_Default_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>DecisionIQ_Default_Policy_ID__c</fullName>
    <label>DIQ Default Policy ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>