force-app/main/default/objects/Experian_Configuration__c/fields/Default_Subcode__c.field-meta.xml
<CustomField>
    <fullName>Default_Subcode__c</fullName>
    <label>Default Subcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>