force-app/main/default/objects/Experian_Configuration__c/fields/DIQ_user_id__c.field-meta.xml
<CustomField>
    <fullName>DIQ_user_id__c</fullName>
    <label>DIQ user id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>