force-app/main/default/objects/Experian_Configuration__c/fields/Experian_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Experian_Access_Token__c</fullName>
    <label>Experian Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>