force-app/main/default/objects/Experian_Configuration__c/fields/Experian_API_Client_id__c.field-meta.xml
<CustomField>
    <fullName>Experian_API_Client_id__c</fullName>
    <label>Experian API Client id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>