force-app/main/default/objects/Experian_Configuration__c/fields/Experian_Api_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Experian_Api_Client_Secret__c</fullName>
    <label>Experian Api Client Secret</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>