force-app/main/default/objects/Experian_Configuration__c/fields/Experian_API_Password__c.field-meta.xml
<CustomField>
    <fullName>Experian_API_Password__c</fullName>
    <label>Experian API Password</label>
    <length>100</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>