force-app/main/default/objects/Experian_Configuration__c/fields/Experian_API_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Experian_API_User_Name__c</fullName>
    <label>Experian API User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>