force-app/main/default/objects/Experian_Configuration__c/fields/Experian_Environment__c.field-meta.xml
<CustomField>
    <fullName>Experian_Environment__c</fullName>
    <label>Experian Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>