force-app/main/default/objects/Experian_Configuration__c/fields/Experian_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Experian_Token_URL__c</fullName>
    <label>Experian Token URL</label>
    <type>Url</type>
</CustomField>