force-app/main/default/objects/Experian_Configuration__c/fields/Premier_Profile_JSON_URL__c.field-meta.xml
<CustomField>
    <fullName>Premier_Profile_JSON_URL__c</fullName>
    <label>Premier Profile JSON URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>