force-app/main/default/objects/Experian_Configuration__c/fields/Search_URL__c.field-meta.xml
<CustomField>
    <fullName>Search_URL__c</fullName>
    <label>Search URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>