force-app/main/default/objects/Experian_Configuration__c/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <label>Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>